apps/infra/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-console
  namespace: openshift-console
spec:
  ports:
  - port: 9000
    name: http
    protocol: TCP
    targetPort: 9000
  selector:
    app: openshift-console
  type: ClusterIP
