apps/infra/console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: openshift-console
  namespace: openshift-console
spec:
  rules:
  - host: console.192.168.0.100.nip.io
    http:
      paths:
      - backend:
          service:
            name: openshift-console
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: console.k3router.ml
    http:
      paths:
      - backend:
          service:
            name: openshift-console
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
